css/org.css
@charset "UTF-8";

@font-face {
  font-family: "Cascadia Code";
  src: url("../fonts/CascadiaCode.ttf");
}

@font-face {
  font-family: "ETBembo";
  src: url("../fonts/et-book-roman-line-figures.ttf");
}

body {
  font-family: "ETBembo", sans-serif;
  font-size: 18px;
  line-height: 1.7em;
  background-color: #f0edec;
  color: #2c363c;
}

ul.org-ul {
  line-height: 1.4em;
}

a {
  color: #2c363c;
}

a:hover {
  color: #685c56;
}

b {
  font-weight: 400;
}

h1 {
  font-size: 3em;
  padding-bottom: 1em;
}

code {
  font-size: 14px;
}

#content {
  margin: 0 auto;
  max-width: 60%;
  margin-top: 5em;
  margin-bottom: 5em;
}

#org-div-home-and-up {
  text-align: right;
  font-size: 13px;
  white-space: nowrap;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 15px;
}

pre.src {
  font-family: "Cascadia Code";
  font-size: 14px;
  line-height: 1.5em;
  background-color: #ede8e6;
  padding: 20px;
}

pre.src:before {
  background: #ede8e6;
}

.links {
  display: none;
}

::-webkit-scrollbar {
  width: 13px;
}

::-webkit-scrollbar-track {
  background: #e9e4e2;
}

::-webkit-scrollbar-thumb {
  background: #ccc7c5;
}

::-webkit-scrollbar-thumb:hover {
  background: #b2aead;
}

::-moz-selection {
  background: #cbd9e3;
}

::selection {
  background: #cbd9e3;
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  #content {
    max-width: 90%;
  }
  pre.src {
    font-size: 12px;
  }
}

